Small bug fix on mobile version

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -282,7 +282,7 @@ button {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
-  animation-duration: 2s;
+  animation-duration: 1s;
 }
 
 @-webkit-keyframes fade {
